--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <img src = "img/Main_Logo (1).png" alt = "Imagem Stardew Valley">
       </div>
 
+      <!-- DIVISOR -->
+      <div id = "divider"></div> 
+
    </header>
    
    <!-- MAIN -->
