--- a/index.html
+++ b/index.html
@@ -6,29 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto | Stardew Valley</title>
     <link rel = "stylesheet" href = "css/estilos.css"/>
-    <link rel = "shortcut icon" href = "/img/favicon.png"/>
+    <link rel = "shortcut icon" href = "../img/favicon.png"/>
   </head>
   <body>
 
     <!-- NAVEGAÇÃO -->
     <nav>
       <div class="container">
-        <h1>
-          <a href="index.html">
-            <img src="img/galinha.png" alt="Meu Logotipo" />
-          </a>
-        </h1>
+        <h1> <a href="index.html"> <img src="../img/galinha.png" alt="Meu Logotipo" /> </a> </h1>
+  
         <ul>
-          <li>
-            <a href="index.html">início</a>
-          </li>
-          <li>
-            <a href="servicos.html">serviços</a>
-          </li>
-          <li>
-            <a href="contato.html">contato</a>
-          </li>
+          <li><a href="index.html">início</a></li>
+          <li><a href="comprar.html">Comprar</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
+
       </div>
     </nav>
 
@@ -36,7 +28,7 @@
    <header>
 
       <div class = "tamanho_img clearfix">
-        <img src = "img/Main_Logo (1).png" alt = "Imagem Stardew Valley">
+        <img src = "../img/Main_Logo (1).png" alt = "Imagem Stardew Valley">
       </div>
 
       <!-- DIVISOR -->
@@ -46,6 +38,8 @@
    
    <!-- MAIN -->
    <main>
+
+      <span class = "content_title"> Você está se mudando para o vale...</span>
       <div class = "container clearfix">
         <div class = "col-6"><h1>TITULO</h1></div>
         <div class = "col-6"><h1>TITULO</h1></div>  
